--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.21.0",
+    "react-router-dom": "^6.27.0",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
