--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
   "dependencies": {
     "chart.js": "^4.4.6",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "mongoose": "^8.8.0",
     "react-chartjs-2": "^5.2.0"
-  }
+  },
+  "name": "yummyrestaurant",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
